working on nav menu

--- a/src/main.css
+++ b/src/main.css
@@ -18,18 +18,56 @@ header{
   position: relative;
   background-color: beige;
 }
+hr{
+  height: .25rem;
+  width: 10%;
+  margin: 0;
+  background: tomato;
+  border: none;
+  transition: .3s ease-in-out;
+}
 .logo{
   width: 50px;
   height: 50px;
 }
 .logoContainer{
   display: inline-block;
+  margin-left: 2rem;
+}
+.myInfo{
+  position: absolute;
+  right: 0%;
+  top: 25%;
+  margin-right: 2rem;
 }
 .myInfo li{
   display: inline-block;
-  margin-left: 1rem;
+  margin-left: 3rem;
+  font-size: 2.5rem;
+}
+.aboutLink:hover ~ hr {
+  margin-left: 20%;
+
+}
+.portfolioLink:hover ~ hr {
+  margin-left: 40%;
+
+}
+.resumeLink:hover ~ hr {
+  margin-left: 60%;
+
+}
+.emailLink:hover ~ hr {
+  margin-left: 80%;
+
+}
+.gitLink:hover ~ hr {
+  margin-left: 100%;
+
 }
 nav{
   display: inline-block;
   float: right;
+  margin-right: 2rem;
+  vertical-align: middle;
 }
