--- a/src/main.css
+++ b/src/main.css
@@ -118,7 +118,9 @@ header{
   font-family: 'Montserrat-ExtraBold', sans-serif;
   font-weight: 900;
   justify-content: center;
-  width: 70%;
+  width: 60%;
+  position: relative;
+  left: 20%;
 }
 .flexItem-skill{
   margin: 1.5rem;
@@ -129,7 +131,7 @@ header{
   width: 10rem;
 }
 .skillSection{
-  
+position: relative;
 }
 .skillList{
   width: 100%;
